--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "dev": "node index.js",
   "scripts": {
-    "dev": "nodemon api/index.js",
+    "dev": "nodemon server/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -13,7 +13,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "mongoose": "^8.6.3",
     "nodemon": "^3.1.6"
   }
 }
