--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "dev": "node index.js",
   "scripts": {
-    "dev": "nodemon server/index.js",
+    "dev": "nodemon api/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
