--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemon": "^3.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "redux-persist": "^6.0.0"
   }
 }
