--- a/package.json
+++ b/package.json
@@ -16,13 +16,16 @@
     "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.5.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "firebase": "^10.13.2",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.3",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
